# hollerbox

./: .gitignore  LICENSE  Makefile  README.md  setup.sh
.github/workflows/: ci.yml  release.yml
app/: HollerBox.spec  launcher.py  pyproject.toml  updater.py
app/tests/: test_updater.py
backend/: hollerbox.example.toml  pyproject.toml
backend/api/: __init__.py  __main__.py  _attachments.py  auth.py  deps.py  main.py  schemas.py  worker.py
backend/api/routes/: __init__.py  approvals.py  conversations.py  files.py  health.py  providers.py  runs.py  secrets.py  settings.py  workflows.py
backend/hollerbox/: __init__.py  cli.py  registry.py  secrets.py
backend/hollerbox/channels/: __init__.py
backend/hollerbox/conversation/: __init__.py  replies.py  router.py  session.py
backend/hollerbox/core/: __init__.py  context.py  file_extract.py  runner.py  templating.py  workflow.py
backend/hollerbox/providers/: __init__.py  anthropic.py  base.py  gemini_image.py  image_base.py  mock.py  ollama.py  openai.py  openai_image.py
backend/hollerbox/scheduler/: __init__.py
backend/hollerbox/steps/: __init__.py  base.py  files.py  http.py  image.py  llm.py  python_step.py  shell.py
backend/hollerbox/store/: __init__.py  db.py  models.py  repo.py
backend/tests/: conftest.py  test_api_auth.py  test_api_bootstrap.py  test_api_conversations.py  test_api_events.py  test_api_files.py  test_api_health.py  test_api_providers.py  test_api_runs.py  test_api_secrets.py  test_api_settings.py  test_api_validate.py  test_api_workflows.py  test_cli.py  test_cli_integration.py  test_context.py  test_conversation_replies.py  test_conversation_router.py  test_conversation_session.py  test_engine_imports_clean.py  test_provider_anthropic.py  test_provider_gemini_image.py  test_provider_mock.py  test_provider_ollama.py  test_provider_openai.py  test_provider_openai_image.py  test_registry.py  test_runner.py  test_secrets.py  test_step_base.py  test_step_files.py  test_step_http.py  test_step_image.py  test_step_llm.py  test_step_llm_attachments.py  test_step_python.py  test_step_shell.py  test_store.py  test_templating.py  test_workflow.py
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.test.tsx  App.tsx  index.css
web/src/api/: client.test.ts  client.ts  types.ts
web/src/components/: Attachment.tsx  Layout.tsx  StatusChip.tsx  TokenGate.tsx
web/src/components/editor/: FormView.tsx
web/src/lib/: draftYaml.test.ts  draftYaml.ts  format.ts  useApi.ts
web/src/pages/: Chat.tsx  Dashboard.tsx  Editor.tsx  RunDetail.tsx  Runs.tsx  Settings.tsx  Workflows.tsx
workflows/: hello.yaml
workflows/examples/: file_pipeline.yaml  generate_image.yaml  summarize_text.yaml
workflows/templates/: analyze_file.yaml  blank.yaml  generate_image.yaml  news_digest.yaml  shell_command.yaml  summarize_file.yaml  summarize_url.yaml
