[project]
name = "hollerbox"
version = "0.0.1"
description = "Local-first, chat-driven AI workflow engine. Open source. Always yours."
readme = { file = "../README.md", content-type = "text/markdown" }
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Parth Kadakia" },
    { name = "Brand Box LLC" },
]
keywords = ["ai", "workflows", "automation", "local-first", "chat", "agents"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pydantic>=2.7",
    "click>=8.1",
    "pyyaml>=6.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.30",
    "sse-starlette>=2.0",
]
llm = [
    "anthropic>=0.40",
    "openai>=1.40",
    "httpx>=0.27",
]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "types-PyYAML>=6.0",
]

[project.scripts]
hollerbox = "hollerbox.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["hollerbox", "api"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM"]
ignore = ["E501"]
